--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,26 +1,17 @@
+@import 'flatly/vars';
+
 // bower:scss
+@import "bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 // endbower
 
-body {
-  background: #fafafa;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #333;
-}
+@import 'flatly/theme';
 
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-  h1 {
-    font-size: 60px;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
+@import 'vars';
+
+
+body {
+  background: $white;
+  color: $black;
 }
 
 .browsehappy {
@@ -28,4 +19,53 @@ body {
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
+}
+
+#skeleton{
+margin-top: 58px;
+
+  // For larger displays.
+  // TODO: Add @media queries.
+  #sidebar{
+    position: fixed;
+    min-height: 100%;
+    .well{
+      min-height: 100%;
+      position: absolute;
+    }
+
+    aside{
+      article{
+        &:first-child{
+          margin-bottom: 25px;
+        }
+      }
+    }
+  }
+}
+
+
+// Directional Magic
+// TODO : Need to move in Separate File.
+$collection : ('left', 'right','top', 'bottom');
+
+@each $direction in $collection {
+  .no-#{$direction}-padding{
+    padding-#{$direction}: 0;
+  }
+
+  .no-#{$direction}-margin{
+    margin-#{$direction}: 0;
+  }
+
+  @for $i from 10 through 20{
+
+    .minor-#{$direction}-spacing-#{$i}{
+      margin-#{$direction}: $i + px;
+    }
+
+    .minor-#{$direction}-padding-#{$i}{
+      padding-#{$direction}: $i + px;
+    }
+  }
 }
