changes in story-snapshot UI, added buttons

--- a/app/partials/index.html
+++ b/app/partials/index.html
@@ -1,5 +1,38 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-4">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title text-center">Lorem ipsum dolor sit amet.</h3>
+      </div>
+      <div class="panel-body">
+        <div style="height: 250px; overflow: hidden">
+          <div style="margin-top: -30px;">
+            <nvd3 options='vm.options' data='vm.makeData()'></nvd3>
+          </div>
+        </div>
+      </div>
+      <div class="panel-footer" style="background-color: transparent">
+        <div class="text-center">
+          <a href="#" class="btn text-primary no-top-padding no-bottom-padding">
+            <i class="fa fa-bullhorn"></i>
+          </a>
+          <a href="#" class="btn text-primary no-top-padding no-bottom-padding">
+            <i class="fa fa-heart-o"></i>
+          </a>
+          <a href="#" class="btn text-primary no-top-padding no-bottom-padding">
+            <i class="fa fa-star"></i>
+          </a>
+          <a href="#" class="btn text-primary no-top-padding no-bottom-padding">
+            <i class="fa fa-external-link-square"></i>
+          </a>
+          <a href="#" class="btn text-danger no-top-padding no-bottom-padding">
+            <i class="fa fa-flag"></i>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-4">
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title text-center">Lorem ipsum dolor sit amet.</h3>
@@ -12,31 +45,8 @@
         deserunt eum eveniet ipsam odit quam sint. Natus, repellendus.
       </div>
     </div>
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title text-center">Lorem ipsum dolor sit amet.</h3>
-      </div>
-      <div class="panel-body">
-        <nvd3 options='vm.options' data='vm.makeData()'></nvd3>
-      </div>
-      <div class="panel-footer">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad amet blanditiis error esse et excepturi, facere in
-        iusto laboriosam minima modi molestias nostrum obcaecati, perspiciatis quaerat, quisquam ut? Ipsum, tempora?
-      </div>
-    </div>
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title text-center">Lorem ipsum dolor sit amet.</h3>
-      </div>
-      <div class="panel-body">
-        <nvd3 options='vm.options' data='vm.makeData()'></nvd3>
-      </div>
-      <div class="panel-footer">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi dignissimos eaque libero minus nihil, numquam quaerat repellat sed ut velit.
-      </div>
-    </div>
   </div>
-  <div class="col-md-6">
+  <div class="col-md-4">
     <div class="panel panel-primary">
       <div class="panel-heading">
         <h3 class="panel-title text-center">Lorem ipsum dolor sit amet.</h3>
@@ -45,19 +55,8 @@
         <nvd3 options='vm.options' data='vm.makeData()'></nvd3>
       </div>
       <div class="panel-footer">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad amet blanditiis error esse et excepturi, facere in
-        iusto laboriosam minima modi molestias nostrum obcaecati, perspiciatis quaerat, quisquam ut? Ipsum, tempora?
-      </div>
-    </div>
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title text-center">Lorem ipsum dolor sit amet.</h3>
-      </div>
-      <div class="panel-body">
-        <nvd3 options='vm.options' data='vm.makeData()'></nvd3>
-      </div>
-      <div class="panel-footer">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi dignissimos eaque libero minus nihil, numquam quaerat repellat sed ut velit.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consectetur corporis
+        deserunt eum eveniet ipsam odit quam sint. Natus, repellendus.
       </div>
     </div>
   </div>
