added story directive with minimal configurations

--- a/app/partials/index.html
+++ b/app/partials/index.html
@@ -1,64 +1,18 @@
 <div class="row">
   <div class="col-md-4">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title text-center">Lorem ipsum dolor sit amet.</h3>
-      </div>
-      <div class="panel-body">
-        <div style="height: 250px; overflow: hidden">
-          <div style="margin-top: -30px;">
-            <nvd3 options='vm.options' data='vm.makeData()'></nvd3>
-          </div>
-        </div>
-      </div>
-      <div class="panel-footer" style="background-color: transparent">
-        <div class="text-center">
-          <a href="#" class="btn text-primary no-top-padding no-bottom-padding">
-            <i class="fa fa-bullhorn"></i>
-          </a>
-          <a href="#" class="btn text-primary no-top-padding no-bottom-padding">
-            <i class="fa fa-heart-o"></i>
-          </a>
-          <a href="#" class="btn text-primary no-top-padding no-bottom-padding">
-            <i class="fa fa-star"></i>
-          </a>
-          <a href="#" class="btn text-primary no-top-padding no-bottom-padding">
-            <i class="fa fa-external-link-square"></i>
-          </a>
-          <a href="#" class="btn text-danger no-top-padding no-bottom-padding">
-            <i class="fa fa-flag"></i>
-          </a>
-        </div>
-      </div>
-    </div>
+    <story heading="Amet consectetur corporis."
+           options="vm.options" data="vm.makeData()">
+    </story>
   </div>
   <div class="col-md-4">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title text-center">Lorem ipsum dolor sit amet.</h3>
-      </div>
-      <div class="panel-body">
-        <nvd3 options='vm.options' data='vm.makeData()'></nvd3>
-      </div>
-      <div class="panel-footer">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consectetur corporis
-        deserunt eum eveniet ipsam odit quam sint. Natus, repellendus.
-      </div>
-    </div>
+    <story type="live" heading="Lorem ipsum dolor sit amet."
+           options="vm.options" data="vm.makeData()">
+    </story>
   </div>
   <div class="col-md-4">
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        <h3 class="panel-title text-center">Lorem ipsum dolor sit amet.</h3>
-      </div>
-      <div class="panel-body">
-        <nvd3 options='vm.options' data='vm.makeData()'></nvd3>
-      </div>
-      <div class="panel-footer">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consectetur corporis
-        deserunt eum eveniet ipsam odit quam sint. Natus, repellendus.
-      </div>
-    </div>
+    <story type="closed" heading="Amet consectetur corporis."
+           options="vm.options" data="vm.makeData()">
+    </story>
   </div>
 </div>
 
