--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,13 +1,9 @@
 @import 'flatly/vars';
-
 // bower:scss
 @import "bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 // endbower
-
 @import 'flatly/theme';
-
 @import 'vars';
-
 
 body {
   background: $white;
@@ -21,22 +17,22 @@ body {
   padding: 0.2em 0;
 }
 
-#skeleton{
-margin-top: 58px;
+#skeleton {
+  margin-top: 58px;
 
   // For larger displays.
   // TODO: Add @media queries.
-  #sidebar{
+  #sidebar {
     position: fixed;
     min-height: 100%;
-    .well{
+    .well {
       min-height: 100%;
       position: absolute;
     }
 
-    aside{
-      article{
-        &:first-child{
+    aside {
+      article {
+        &:first-child {
           margin-bottom: 25px;
         }
       }
@@ -44,27 +40,85 @@ margin-top: 58px;
   }
 }
 
+.login-wrapper {
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height:100%;
+  background: linear-gradient(135deg, $brand-primary 10%, darken($brand-primary, 10%) 90%);
+
+  .well {
+    background-color: #fff !important;
+    border-radius: 0 !important;
+    border: none !important;
+    box-shadow: 0 0 50px rgba(0,0,0,0.35);
+
+    &.login-box {
+      width: 300px;
+      margin: 100px auto;
+    }
+    &.login-box legend {
+      font-size: 26px;
+      text-align: center;
+      font-weight: 300;
+    }
+    &.login-box label {
+      font-weight: 300;
+      font-size: 16px;
+
+    }
+    &.login-box input[type="text"] {
+      box-shadow: none;
+      border-color: #ddd;
+      border-radius: 0;
+    }
+
+    &.welcome-text {
+      font-size: 21px;
+    }
+  }
+}
+// Directives
+// TODO : Need to move in Separate File.
+
+.story-directive {
+  .label-wrap {
+    position: absolute;
+  }
+  .graph-wrap {
+    height: 250px;
+    overflow: hidden;
+    & > div{
+      margin-top: -30px;
+    }
+  }
+
+  .panel-footer{
+    background: transparent !important;
+  }
+}
 
 // Directional Magic
 // TODO : Need to move in Separate File.
-$collection : ('left', 'right','top', 'bottom');
+$collection: ('left', 'right', 'top', 'bottom');
 
 @each $direction in $collection {
-  .no-#{$direction}-padding{
+  .no-#{$direction}-padding {
     padding-#{$direction}: 0;
   }
 
-  .no-#{$direction}-margin{
+  .no-#{$direction}-margin {
     margin-#{$direction}: 0;
   }
 
-  @for $i from 10 through 20{
+  @for $i from 10 through 20 {
 
-    .minor-#{$direction}-spacing-#{$i}{
+    .minor-#{$direction}-spacing-#{$i} {
       margin-#{$direction}: $i + px;
     }
 
-    .minor-#{$direction}-padding-#{$i}{
+    .minor-#{$direction}-padding-#{$i} {
       padding-#{$direction}: $i + px;
     }
   }
