--- a/app/templates/story.html
+++ b/app/templates/story.html
@@ -17,19 +17,23 @@
   </div>
   <div class="panel-footer">
     <div>
-      <a ui-sref="#" class="btn no-left-padding no-bottom-padding no-top-padding text-primary">
+      <a tooltip="Shout it to Social Media"
+         class="btn no-left-padding no-bottom-padding no-top-padding text-primary">
         <i class="fa fa-bullhorn"></i>
       </a>
-      <a ui-sref="#" class="btn no-bottom-padding no-top-padding text-primary">
+      <a tooltip="Like"
+         class="btn no-bottom-padding no-top-padding text-primary">
         <i class="fa fa-heart-o"></i>
       </a>
-      <a ui-sref="#" class="btn no-bottom-padding no-top-padding text-primary">
+      <a tooltip="9.3"
+         class="btn no-bottom-padding no-top-padding text-primary">
         <i class="fa fa-star"></i>
       </a>
-      <a ui-sref="#" class="btn minor-right-padding-20 minor-left-padding-20 no-bottom-padding no-top-padding text-primary">
+      <a class="btn minor-right-padding-20 minor-left-padding-20 no-bottom-padding no-top-padding text-primary">
         View Story
       </a>
-      <a ui-sref="#" class="btn no-right-padding no-bottom-padding no-top-padding text-danger">
+      <a tooltip="Report Abusive"
+         class="btn no-right-padding no-bottom-padding no-top-padding text-danger">
         <i class="fa fa-flag"></i>
       </a>
     </div>
