added page headers; settings partial; icons for sidebar categories.

--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -1,4 +1,9 @@
 <div class="login-wrapper">
+  <div class="close-btn-wrap pull-right">
+    <a ui-sref="root.index" class="btn btn-primary">
+      <i class="fa fa-times"></i>
+    </a>
+  </div>
   <div class="well login-box">
 
     <form ng-submit="vm.login(username, password)">
