added single story page with disqus plugin

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -89,6 +89,11 @@ body {
   }
 }
 
+#story{
+  .buttons-wrap{
+    padding-top: 10px;
+  }
+}
 // Directives
 // TODO : Need to move in Separate File.
 
