--- a/app/partials/index.html
+++ b/app/partials/index.html
@@ -1,16 +1,16 @@
 <div class="row">
   <div class="col-md-4">
-    <story heading="Amet consectetur corporis."
+    <story heading="Amet consectetur corporis." show-header="true"
            options="vm.options" data="vm.data[0]">
     </story>
   </div>
   <div class="col-md-4">
-    <story type="live" heading="Lorem ipsum dolor sit amet."
+    <story type="live" heading="Lorem ipsum dolor sit amet." show-header="true"
            options="vm.options" data="vm.data[1]">
     </story>
   </div>
   <div class="col-md-4">
-    <story type="closed" heading="Amet consectetur corporis."
+    <story type="closed" heading="Amet consectetur corporis." show-header="true"
            options="vm.options" data="vm.data[2]">
     </story>
   </div>
