--- a/app/templates/story.html
+++ b/app/templates/story.html
@@ -1,5 +1,5 @@
 <div class="panel panel-primary story-directive">
-  <div class="panel-heading">
+  <div class="panel-heading" ng-if="showHeader">
     <h3 class="panel-title text-center">
       <span ng-bind="heading"></span>
       <div class="pull-right">
@@ -8,7 +8,7 @@
     </h3>
   </div>
   <div class="panel-body">
-    <div class="label-wrap">
+    <div class="label-wrap" ng-if="showHeader">
       <span ng-if="getType('live')" class="label label-success">Live</span>
       <span ng-if="getType('closed')" class="label label-danger">Closed</span>
 
@@ -30,7 +30,7 @@
 
     </div>
   </div>
-  <div class="panel-footer">
+  <div class="panel-footer" ng-if="showHeader">
     <div>
       <a tooltip="Shout it to Social Media"
          class="btn no-bottom-padding no-top-padding text-primary">
