--- a/app/partials/story.html
+++ b/app/partials/story.html
@@ -4,12 +4,11 @@
       <story type="closed" heading="Amet consectetur corporis." show-header="false"
              options="vm.options" data="vm.makeData()">
       </story>
-
       <accordion>
         <accordion-group is-open="true" heading="Story in picture">
           <div class="row">
             <div class="col-md-6 minor-bottom-padding-20">
-            <img class="img-responsive" src="images/mock/1@500.jpg" alt=""/>
+              <img class="img-responsive" src="images/mock/1@500.jpg" alt=""/>
             </div>
             <div class="col-md-6 minor-bottom-padding-20">
               <img class="img-responsive" src="images/mock/2@500.jpg" alt=""/>
@@ -29,17 +28,23 @@
 
         </accordion-group>
         <accordion-group heading="Story in audio">
-          <iframe width="100%" height="160" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/14243905&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=false"></iframe>
+          <iframe width="100%" height="160" scrolling="no" frameborder="no"
+                  src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/14243905&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=false"></iframe>
         </accordion-group>
         <accordion-group heading="Story in document">
-            <p class="text-danger text-center no-bottom-margin">No documents, yet.</p>
+          <p class="text-danger text-center no-bottom-margin">No documents, yet.</p>
         </accordion-group>
       </accordion>
 
     </div>
     <div class="col-md-8">
       <h1>Amet consectetur corporis.</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam, consequatur ea expedita facilis ipsam iure labore minus nobis officia optio, perferendis quas similique tempora voluptatum! Accusamus, cupiditate dolores eveniet fuga ipsum itaque libero minima molestias perspiciatis possimus repellendus repudiandae ut, voluptates. </p>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aperiam, consequatur ea expedita facilis
+        ipsam iure labore minus nobis officia optio, perferendis quas similique tempora voluptatum! Accusamus,
+        cupiditate dolores eveniet fuga ipsum itaque libero minima molestias perspiciatis possimus repellendus
+        repudiandae ut, voluptates. </p>
+
       <div class="buttons-wrap">
         <a tooltip="Shout it to Social Media"
            class="btn btn-sm btn-primary">
@@ -56,19 +61,47 @@
       </div>
 
       <br class="clear-fix"/>
-      <div id="disqus_thread"></div>
+      <accordion>
+        <accordion-group is-open="true" heading="Comments">
+          <div id="disqus_thread"></div>
+        </accordion-group>
+        <accordion-group heading="Video comments">
+          <div class="row">
+            <div class="col-md-3">
+              <img class="img-responsive" src="images/mock/2@500.jpg" alt=""/>
+            </div>
+            <div class="col-md-3">
+              <img class="img-responsive" src="images/mock/3@500.jpg" alt=""/>
+            </div>
+            <div class="col-md-3">
+              <img class="img-responsive" src="images/mock/4@500.jpg" alt=""/>
+            </div>
+          </div>
+          <br class="clearfix"/>
+          <div class="row">
+            <div class="col-md-12">
+              <input type="button" class="btn btn-sm btn-primary pull-right" value="Add a video comment"/>
+            </div>
+          </div>
+
+        </accordion-group>
+      </accordion>
+
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'capture-event';
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+        (function () {
+          var dsq = document.createElement('script');
+          dsq.type = 'text/javascript';
+          dsq.async = true;
           dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
           (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
       </script>
-      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+      <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments
+        powered by Disqus.</a></noscript>
     </div>
   </div>
 
