Fixed graph toggling issue in the story page

--- a/app/partials/story.html
+++ b/app/partials/story.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-4">
       <story type="closed" heading="Amet consectetur corporis." show-header="false"
-             options="vm.options" data="vm.makeData()">
+             options="vm.options" data="vm.data">
       </story>
       <accordion>
         <accordion-group is-open="true" heading="Story in picture">
