--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -178,6 +178,28 @@ body {
     }
   }
 }
+#settings{
+  h3{
+    border-bottom: 1px solid $primary;
+    display: block;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+  }
+
+  // Tags directive overrides.
+  .tags{
+    border-radius: 3px;
+    ul.tag-list > li.tag-item{
+      border-radius: 2px;
+      border-color: darken($success, 5%);
+      color: #FFF;
+      background: $success;
+      a{
+        color: inherit;
+      }
+    }
+  }
+}
 .breaker{
   margin: 5px 0;
   padding: 0;
