--- a/app/partials/skeleton.html
+++ b/app/partials/skeleton.html
@@ -46,18 +46,6 @@
         <aside>
           <article>
             <ul class="nav nav-pills nav-stacked">
-              <li>
-                <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Search for..."/>
-                  <span class="input-group-btn">
-                    <button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
-                  </span>
-                </div>
-              </li>
-            </ul>
-          </article>
-          <article>
-            <ul class="nav nav-pills nav-stacked">
               <li ng-class="{'active' : vm.isStateActive('root.index')}">
                 <a ui-sref="root.index" class="minor-top-padding-5 minor-bottom-padding-5">
                   <i class="fa fa-home minor-right-spacing-10"></i>
@@ -95,7 +83,26 @@
     </div>
     <div class="col-lg-offset-2 col-lg-10 col-xs-12 no-right-padding">
       <br class="clearfix"/>
+      <article ng-show="vm.isSearchBarVisible">
+        <ul class="nav nav-pills nav-stacked">
+          <li>
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search for..."/>
+                  <span class="input-group-btn">
+                    <button class="btn btn-primary" type="button"><i class="fa fa-search"></i></button>
+                  </span>
+            </div>
+          </li>
+        </ul>
+        <p class="text-primary minor-top-padding-10">
+          <i class="fa fa-map-marker minor-right-padding-5"></i>
+          Location :
 
+          <span class="text-muted">
+            Karachi, PK.
+          </span>
+        </p>
+      </article>
       <section ui-view="skeleton">
       </section>
       <br class="clearfix"/>
